--- a/nav.css
+++ b/nav.css
@@ -10,3 +10,7 @@
   border: 1px solid rgba(255, 255, 255, 0.18);
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
 }
+.navbar {
+  background-color: #f1f1f1;
+  font-weight: 500;
+}
